--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   color: white;
-  background-color: black;
+  background-color: green;
   font-size: 32px;
-  font-family: 'Sacramento', cursive;
+  font-family: 'Satisfy', cursive;
   margin-top: 5%;
   margin-left: 20%;
   margin-right: 20%;
